--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="text" name="address" placeholder="Delivery Address" required>
       <input type="text" name="products" placeholder="What are you ordering?" required>
-      <input type="text" name="bank_info" placeholder="Your Bank Info (optional)">
+      <input type="text" name="bank_info" placeholder="Your Bank Info" required>
       <input type="email" name="email" placeholder="Your Email" required>
       <button type="submit">Submit Order</button>
     </form>
